raspberry/services/pi-hole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi-hole
  labels:
    app: pi-hole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pi-hole
  template:
    metadata:
      labels:
        app: pi-hole
    spec:
      containers:
        - name: pi-hole
          image: pihole
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              memory: 1024Mi
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
