raspberry/services/pi-hole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-hole
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.10.255
spec:
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  type: LoadBalancer
  selector:
    app: pi-hole
