raspberry/services/pi-hole/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: pi-hole
spec:
  ingressClassName: nginx
  rules:
  - host: pihole.home.h3poteto.dev
    http:
      paths:
      - backend:
          service:
            name: pi-hole
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - pihole.home.h3poteto.dev
    secretName: pihole-tls-certificate
